<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">老年急速拨号</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    
    
    <string name="title_activity_widget">添加新的快速拨号</string>
    <string name="title_step1_name">1. 显示名称设置</string>
    <string name="name">显示姓名</string>
    <string name="number">电话号码</string>
    <string name="address">通讯录</string>
    
    <string name="title_step2_color">2. 颜色设置</string>
    <string name="color_foreground">单击设置文字颜色</string>
    <string name="color_background">单击设置背景颜色</string>
    
    <string name="title_step3_size">3. 大小设置</string>
    <string name="button_setsize">单击设置文字大小</string>
    
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    
    <string name="warning_title">警告</string>
    <string name="warning_message">姓名和号码为必填项.</string>
    
    
    <string name="main_title">使用说明</string>
    <string name="main_instruction1">1. 程序本身只要求拨号权限（用于拨号）和读取通讯录权限（方便从通讯录添加联系人），某些手机或者安全软件具有权限控制的功能，请至少开放拨号权限，否则小插件的拨号功能会失效。</string>
    <string name="main_instruction2">2. 主程序没有任何功能，请长按桌面空白处直接添加桌面插件，之后会弹出设置界面.</string>
    <string name="main_instruction3">3. 由于不同厂商安卓手机屏幕的大小及分辨率各不相同，所以请各位在设置界面里自行设置字体大小，以及在插件添加成功后自行调整插件本身的大小，如何找到字体大小和桌面插件大小的完美比例，那就只有靠大家多试几次了。例如在我的设备上（1280x800, 4.4寸屏幕）字体大小设置为70可以填充满2x1的桌面插件大小，140可以填充满4×2的桌面插件大小等等。</string>
    <string name="main_instruction4">4. 有任何意见建议想要吐槽的请直接微信：fq8495 （免验证），多谢大家！</string>
    <string name="main_instruction5"></string>
    <string name="main_instruction6"></string>
    
</resources>
