<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="github.com.fq310.FastDial.widget.WidgetActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_step1_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp" >

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_name"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp" >

        <TextView
            android:id="@+id/textView_humber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp" >

        <Button
            android:id="@+id/button_addFromAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addFromAddress"
            android:text="@string/addFromAddress" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_step2_color"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp" >

        <Button
            android:id="@+id/button_setForeColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addForeColor"
            android:text="@string/color_foreground" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp" >

        <Button
            android:id="@+id/button_setBackColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addBackColor"
            android:text="@string/color_background" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/placeHolderLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

    </LinearLayout>
    
    <LinearLayout
        android:layout_height="34dp"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/cancel" />
          
        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/ok" />

    </LinearLayout>
</LinearLayout>
